[project]
name = "naesb-edi-gateway"
version = "0.4.0"
description = "NAESB WGQ 4.0 Internet ET (PGP-over-HTTP) EDI gateway"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "python-gnupg>=0.5.2",
  "python-multipart>=0.0.9",
  "boto3>=1.34",
  "psycopg[binary,pool]>=3.1",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "moto[s3]>=5.0",
  "testcontainers[postgres]>=4.0",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
markers = [
  "integration: requires Docker (testcontainers) for real Postgres",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
